@@ -5,22 +5,22 @@ from functions.utils import (stylesheet_creation_function, weather_to_pictogramm
 
 def set_mainwindow_icons(self):
     # icon_creation_function('option_icon.svg', self.gui_path + '/')
-    self.exit_button.setIcon(icon_creation_function('exit_icon.svg', self.gui_path + '/'))
-    self.separator.setIcon(icon_creation_function('separator_icon_2.png', self.gui_path + '/'))
-    self.option_button.setIcon(icon_creation_function('option_icon.svg', self.gui_path + '/'))
-    self.about_button.setIcon(icon_creation_function('about_popup_icon.svg', self.gui_path + '/'))
-    self.in_out_bt.setIcon(icon_creation_function('int_ext_icon.svg', self.gui_path + '/'))
-    self.time_series_bt.setIcon(icon_creation_function('time_series_icon.svg', self.gui_path + '/'))
-    self.h1_prev_bt.setIcon(icon_creation_function('prev_1h_icon.svg', self.gui_path + '/'))
-    self.h6_prev_bt.setIcon(icon_creation_function('prev_6h_icon.svg', self.gui_path + '/'))
-    self.left_ts_button.setIcon(icon_creation_function('left_icon.svg', self.gui_path + '/'))
-    self.ts_page_marker_1.setIcon(icon_creation_function('filled_circle_icon.svg', self.gui_path + '/'))
-    self.ts_page_marker_2.setIcon(icon_creation_function('empty_circle_icon.svg', self.gui_path + '/'))
-    self.right_ts_button.setIcon(icon_creation_function('right_icon.svg', self.gui_path + '/'))
-    self.left_fc_button.setIcon(icon_creation_function('left_icon.svg', self.gui_path + '/'))
-    self.fc_page_marker_1.setIcon(icon_creation_function('filled_circle_icon.svg', self.gui_path + '/'))
-    self.fc_page_marker_2.setIcon(icon_creation_function('empty_circle_icon.svg', self.gui_path + '/'))
-    self.right_fc_button.setIcon(icon_creation_function('right_icon.svg', self.gui_path + '/'))
+    self.exit_button.setIcon(icon_creation_function('exit_icon.svg', self.gui_path))
+    self.separator.setIcon(icon_creation_function('separator_icon_2.png', self.gui_path))
+    self.option_button.setIcon(icon_creation_function('option_icon.svg', self.gui_path))
+    self.about_button.setIcon(icon_creation_function('about_popup_icon.svg', self.gui_path))
+    self.in_out_bt.setIcon(icon_creation_function('int_ext_icon.svg', self.gui_path))
+    self.time_series_bt.setIcon(icon_creation_function('time_series_icon.svg', self.gui_path))
+    self.h1_prev_bt.setIcon(icon_creation_function('prev_1h_icon.svg', self.gui_path))
+    self.h6_prev_bt.setIcon(icon_creation_function('prev_6h_icon.svg', self.gui_path))
+    self.left_ts_button.setIcon(icon_creation_function('left_icon.svg', self.gui_path))
+    self.ts_page_marker_1.setIcon(icon_creation_function('filled_circle_icon.svg', self.gui_path))
+    self.ts_page_marker_2.setIcon(icon_creation_function('empty_circle_icon.svg', self.gui_path))
+    self.right_ts_button.setIcon(icon_creation_function('right_icon.svg', self.gui_path))
+    self.left_fc_button.setIcon(icon_creation_function('left_icon.svg', self.gui_path))
+    self.fc_page_marker_1.setIcon(icon_creation_function('filled_circle_icon.svg', self.gui_path))
+    self.fc_page_marker_2.setIcon(icon_creation_function('empty_circle_icon.svg', self.gui_path))
+    self.right_fc_button.setIcon(icon_creation_function('right_icon.svg', self.gui_path))
 
 
 def add_1h_forecast_widget(self, hour, weather, temp, full_dt, horizontal_layout=None):
